Tue Dec 10 01:33:52 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Version 2.0 released.

	* octMakefile.in (binary-dist): Print message instead of making a
	binary distribution.

Mon Dec  9 11:28:27 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* README.WINDOWS: New file.
	* octMakefile.in: Distribute it.

	* configure.in: Substitute EXE.  On cygwin32 systems, set it to .exe.
	* Makeconf.in (EXE): Add definition.

	* configure.in: On cygwin32 systems, set default to disable GNU info.

	* aclocal.m4 (OCTAVE_STRING_NPOS): New macro.
	* configure.in: Call it.

	* acconfig.h: Add undef for NPOS.
	* config.h.bot: Remove kluge for deciding whether to define NPOS.

Thu Dec  5 11:05:02 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* config.sub: Update to current version from FSF.

	* Makeconf.in (ALL_LDFLAGS): Add $(FORTRAN_MAIN_FLAG).
	* configure.in (FORTRAN_MAIN_FLAG): Substitute it.

	* octave-bug.in: Prompt for abort, edit, list, or send.
	Get subject from message in case it has been edited.

	* configure.in: When looking for libf2c, provide definitions for
	MAIN_ and MAIN__.

Tue Dec  3 11:35:35 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* config.guess: Delete second copy of script in file.

Sun Nov 24 21:40:25 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Set GCC_IEEE_FP_FLAG to -mieee-fp on all x86
	systems, not just those running Linux.

Fri Nov 22 15:10:34 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave.el: Update from Kurt Hornik to with fixes for
	fill-paragraph.

Wed Nov 20 00:33:03 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Version 1.93.

	* aclocal.m4 (OCTAVE_STRUCT_GR_PASSWD): New macro.
	* configure.in: Use it.
	* acconfig.h (HAVE_GR_PASSWD): Add undef.

Tue Nov 19 23:10:01 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (INCFLAGS): Add libcruft/misc directory.

Thu Nov 14 00:07:31 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave.el (octave-text-functions): Change set and show to