@@ -24,7 +24,7 @@ CONF_DISTFILES = Makefile.in octMakefile.in Makeconf.in configure \
 
 DISTFILES = $(CONF_DISTFILES) \
 	BUGS COPYING INSTALL INSTALL.OCTAVE NEWS NEWS.[0-9] PROJECTS \
-	README README.NLP README.WINDOWS ROADMAP SENDING-PATCHES \
+	README README.NLP README.Windows ROADMAP SENDING-PATCHES \
 	THANKS move-if-change octave.sh octave-bug.in doinstall.sh \
 	mkinstalldirs mkoctfile.in texi2dvi INFO.PATCH MAKEINFO.PATCH \
 	ChangeLog ChangeLog.[0-9]
@@ -214,56 +214,6 @@ binary-dist:
 	@echo "**********************************************************"
 	@echo ""
 .PHONY: binary-dist
-
-# Rules for making a distribution of the docs.
-
-doc-dist-tar:
-	echo octave-$(version) > .fname
-	echo octave-doc-$(version).tar > .tarfname
-	rm -rf `cat .fname`
-	mkdir `cat .fname`
-	ln README.doc COPYING `cat .fname`
-	mkdir `cat .fname`/doc; cd doc; $(MAKE) doc-dist
-	tar chf `cat .tarfname` `cat .fname`
-	rm -rf `cat .fname`
-.PHONY: doc-dist-tar
-
-doc-dist: doc-dist-tar
-.PHONY: doc-dist
-
-# Rules for making a distribution for local use.
-
-local-dist-tar: dist-info-files
-	echo octave-local-$(version) > .fname
-	rm -rf `cat .fname`
-	mkdir `cat .fname`
-	ln $(DISTFILES) `cat .fname`
-	for dir in $(DISTDIRS); do ln -s ../$$dir `cat .fname`; done
-	for dir in $(DISTSUBDIRS); do mkdir `cat .fname`/$$dir; cd $$dir; $(MAKE) $@; cd ..; done
-	tar chf `cat .fname`.tar `cat .fname`
-	rm -rf `cat .fname`
-.PHONY: local-dist-tar
-
-clean-local-dist-tar: local-dist-tar
-	$(MAKE) clean-tar
-.PHONY: clean-local-dist-tar
-
-local-dist: clean-local-dist-tar
-.PHONY: local-dist
-
-# Rules for splitting a distribution.
-
-split-dist:
-	echo octave-$(version) > .fname
-	split -b 1350k `cat .fname`.tar.gz `cat .fname`.tar.gz-
-	rm -f .fname
-.PHONY: split-dist
-
-split-local-dist:
-	echo octave-local-$(version) > .fname
-	split -b 1350k `cat .fname`.tar.gz `cat .fname`.tar.gz-
-	rm -f .fname
-.PHONY: split-local-dist
 
 # Rules for making a dist of just the stuff needed to run configure.
 
